--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_subdirectory("01-tf-new-op")
+# add_subdirectory("01-tf-new-op")
+# add_subdirectory("02-tf-new-cuda-op")
+# add_subdirectory("03-stackoverflow")
+add_subdirectory("04-tf-custom-op-github")
