--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 # add_subdirectory("01-tf-new-op")
 # add_subdirectory("02-tf-new-cuda-op")
 # add_subdirectory("03-stackoverflow")
-add_subdirectory("04-tf-custom-op-github")
+# add_subdirectory("04-tf-custom-op-github")
+# add_subdirectory("05-bilateral-slice")
+add_subdirectory("06_inner_product")
