--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@
 # add_subdirectory("03-stackoverflow")
 # add_subdirectory("04-tf-custom-op-github")
 # add_subdirectory("05-bilateral-slice")
-add_subdirectory("06_inner_product")
+add_subdirectory("time_two/cc")
