--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@
 # add_subdirectory("04-tf-custom-op-github")
 # add_subdirectory("05-bilateral-slice")
 add_subdirectory("time_two/cc")
+# add_subdirectory("inner_product/cc")
