--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,5 @@
 # add_subdirectory("04-tf-custom-op-github")
 # add_subdirectory("05-bilateral-slice")
 # add_subdirectory("time_two/cc")
-add_subdirectory("inner_product/cc")
+# add_subdirectory("inner_product/cc")
+add_subdirectory("bilateral_slice/cc")
